[metadata]
name = conbqa
version = 0.0
author = Syun Izawa
description = Applying Ising machines to continuous black-box optimizations.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.19.0

